--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "private": true,
   "devDependencies": {
     "async": "^2.5.0",
-    "babel-eslint": "^7.2.3",
-    "bundlesize": "^0.12.1",
-    "eslint-plugin-jasmine": "^2.7.1",
+    "babel-eslint": "^8.0.0",
+    "bundlesize": "^0.14.4",
+    "eslint-plugin-jasmine": "^2.8.4",
     "jsdoc-to-markdown": "^3.0.0",
-    "lerna": "^2.0.0",
-    "lint-staged": "^4.0.1",
-    "opt-cli": "^1.5.1",
+    "lerna": "^2.1.2",
+    "lint-staged": "^4.1.3",
+    "opt-cli": "^1.5.2",
     "pre-commit": "^1.2.2",
-    "prettier-eslint-cli": "^4.1.1",
+    "prettier-eslint-cli": "^4.3.2",
     "wait-on": "^2.0.2",
     "wide-align": "^1.1.2"
   },
@@ -44,5 +44,7 @@
       "threshold": "2 Kb"
     }
   ],
-  "dependencies": {}
+  "dependencies": {
+    "rollup-plugin-babel-minify": "^3.1.2"
+  }
 }
